# splitr

./: .gitignore  combined_code.txt
archive/flask-app/: app.py  new_container.sh  run.sh
archive/flask-app/src/templates/: index.html
archive/next-app/: package-lock.json  package.json
archive/next-app/src/bluetooth/: connect.js  send.js
archive/next-app/src/pages/: index.js
blinky/: CMakeLists.txt  prj.conf
blinky/src/: led.c  main.c  main_old.c
blinky/src/modules/ble/: ble.c  ble.h
blinky/src/modules/button/: button.c  button.h
blinky/src/modules/led/: led.c  led.h
blinky/src/utils/: common.h
devyn_esp32_wifi_ap_api /: sdkconfig.old
devyn_esp32_wifi_ap_api /main/: main.c
esp32_bt_wifi_configure/: CMakeLists.txt  main.c
esp32_wifi_ap_api/: CMakeLists.txt  GPIO_CONTROLS_README.md  README.md  buildflash.sh  partitions.csv  prepare_and_flash.sh  sdkconfig
esp32_wifi_ap_api/main/: CMakeLists.txt  audio_player.c  audio_player.h  c.py  gpio_controls.c  gpio_controls.h  main.c  mp3dec.c  mp3dec.h  sample_mp3.h
flask-app/: Dockerfile  play_audio.py  requirements.txt
flask-app/src/static/css/: style.css
next-app/: tsconfig.json
nrf5340_audio_nordic_ex/: prj.conf  prj_release.conf
nrf5340_audio_nordic_ex/broadcast_sourceV2/: CMakeLists.txt  main.c
nrf5340_ble_switching/: CMakeLists.txt  Kconfig  main.c  mock.c
nrf5340_ble_switching/src/: nrf5340_audio_common.c  nrf5340_audio_common.h  uart_handler.c  uart_handler.h
rgb_led/: CMakeLists.txt  Kconfig  prj.conf
rgb_led/src/: main.c
rgb_led/src/utils/: Kconfig  led.c
(+5 files in other folders)
